force-app/main/default/objects/Niche_Vendors_Active__c/Niche_Vendors_Active__c.object-meta.xml
<CustomObject>
    <label>Niche Vendors Active</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Niche Vendors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Niche Vendors Active</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>