force-app/main/default/objects/Niche_Vendors_Active__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Niche Vendors Active</relationshipLabel>
    <relationshipName>Niche_Vendors_Active</relationshipName>
    <type>Lookup</type>
</CustomField>