force-app/main/default/objects/Niche_Vendors_Active__c/fields/Competitor_Strength__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Strength__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Strength</label>
    <type>TextArea</type>
</CustomField>