force-app/main/default/objects/Niche_Vendors_Active__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>Niche Vendors Active</relationshipLabel>
    <relationshipName>Niche_Vendors_Active</relationshipName>
    <type>Lookup</type>
</CustomField>