force-app/main/default/objects/Niche_Vendors_Active__c/fields/Service_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Service_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Competitor</label>
    <type>TextArea</type>
</CustomField>