force-app/main/default/objects/Niche_Vendors_Active__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenure</label>
    <type>TextArea</type>
</CustomField>